--- a/Lib/Lib/Lib.vcxproj
+++ b/Lib/Lib/Lib.vcxproj
@@ -111,6 +111,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="allocator.h" />
+    <ClInclude Include="base.h" />
+    <ClInclude Include="mystl.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
